# prog6

./: README.md
Лабораторная работа №4/: ЛР 4.ipynb  ЛР №4.ipynb
Лабораторная работа №5/: ЛР 5.ipynb  ЛР5.ipynb
Лабораторная работа №6/: Воложанин В.О. ЛР6.ipynb
Лабораторная работа №7/: лр7.ipynb
Лабораторная работа №8/currency_tracker/: README.md  main.py  pyproject.toml
Лабораторная работа №8/currency_tracker/docs/: conf.py  currency_tracker.rst  index.rst
Лабораторная работа №8/currency_tracker/docs/_build/: currency_tracker.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Лабораторная работа №8/currency_tracker/docs/_build/_sources/source/: index.rst.txt
Лабораторная работа №8/currency_tracker/docs/_build/source/: index.html
Лабораторная работа №9/: Dockerfile  README.md  docker-compose.yml  main.py
