[tool.poetry]
name = "currency_tracker"
version = "0.1.0"
description = ""
authors = ["влад"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.25.1"
matplotlib = "^3.3.3"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
